# sAimJr-frontend

./: .gitignore  COMPLETE_WORKFLOW_IMPLEMENTATION.md  LINT_FIXES_COMPLETE.md  PRODUCTION_WORKFLOW.md  PRODUCT_VISION.md  README.md  SECURITY.md  WORKFLOW_FIXES_SUMMARY.md  backend-architecture.md  deploy.sh  next.config.mjs  package.json  render.yaml  setup-repositories.ps1  tsconfig.json
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
app/: globals.css  layout.tsx  page.tsx
app/dev/: page.tsx
app/workflow/: page.tsx
backend/: .pylintrc  ai_chart_generator.py  ai_service.py  check_lint.py  main.py  production_fixed.py  pyproject.toml  requirements.txt
components/: ai-smart-input.tsx  chat-panel.tsx  coa-table.tsx  dynamic-saim-avatar.tsx  error-boundary.tsx  file-upload-prompt.tsx  file-upload-with-progress.tsx  finaceverse-footer.tsx  live-validation-input.tsx  loading-states.tsx  output-panel.tsx  typing-indicator.tsx  workflow-sidebar.tsx
components/dev/: sample-data-controls.tsx
components/ui/: accordion.tsx  alert-dialog.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  command.tsx  index.ts  (+3 more)
docs/: backend-requirements.md  database-schema.md  frontend-functionality.md  screen-specifications.md
frontend/: lint_output.txt  package-lock.json  package.json  pnpm-lock.yaml
hooks/: use-api.ts  use-auth-production.tsx
lib/: ai-validation-socket.ts  api-client-production.ts  api-company-storage.ts  company-storage.ts  enhanced-types.ts  export-utils.ts  types.ts  websocket-manager.ts
public/: sample-coa.csv  sample-contacts.csv
(+114 files in other folders)
